# evidence-first-rag

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/backlog/: 2026-06-22.md
.github/workflows/: eval.yml  publish.yml  regenerate-baseline.yml
adapters/: README.md  example_langchain_retriever.py  example_langfuse_eval.py  example_llamaindex_retriever.py  langchain_retriever.py  langfuse_eval.py  llamaindex_retriever.py
docs/: COMPARISONS.md  METHODOLOGY.md  SWEEP.md  hit5_history.json  measure-challenge-decide-audit.md  portfolio-benchmark.md  portfolio-benchmark.tsv  release-notes-0.1.0.md  two-channel-fastapi.md
docs/adr/: 0001-triage-label-vocabulary.md  0002-stratified-intent-measurement.md  0003-per-intent-ci-gating-deferred.md  0004-chunk-prefixing-experiment-bar.md  0005-rerank-auto-trigger-calibration.md  0006-reach-strategy-retrieval-gate-positioning.md  0007-packaging-harness-as-hitgate.md  0008-ecosystem-embedding-credibility-first.md  0009-methodology-writeup-defer-paper-blog-now.md  0010-reranker-model-portability-tradeoff.md  0011-selective-code-scope-rerank.md  0012-caveat-investment-timing.md  0013-complementary-projects-constellation.md  0013-evalview-borrow-adoption-sequencing.md  0014-demo-data-in-wheel-importlib-resources.md
docs/agents/: domain.md
eval/: audit_contamination.py  baseline.adt.json  baseline.auto-rerank.json  baseline.example.json  baseline.portfolio.json  check.sh  example_external_retriever.py  generate.py  golden.demo.jsonl  golden.fastapi.jsonl  golden.homelab.jsonl  golden.lucky.jsonl  plot_history.py  run.py  test_determinism.py
examples/: retrieval-gate.yml
hitgate/: __init__.py  audit_contamination.py  baseline.auto-rerank.json  baseline.criativaria.json  baseline.example.json  baseline.fastapi.json  baseline.forge-mcp.json  baseline.homelab.json  baseline.lucky.json  check.sh  compare.py  diff.py  example_external_retriever.py  generate.py  golden.adt.jsonl  golden.criativaria.jsonl  golden.demo.jsonl  golden.fastapi-auto.jsonl  golden.forge-mcp.jsonl  golden.portfolio.jsonl  plot_history.py  run.py  scaffold.py  test_determinism.py
ragcore/: __init__.py  build.py  chunkers.py  config.py  mcp_server.py  pack.py  query.py  retrieval.py
scripts/: regenerate-baseline.sh
skills/rag-eval/: README.md  SKILL.md
tests/: conftest.py  test_audit_contamination.py  test_build.py  test_chunkers.py  test_compare.py  test_config.py  test_determinism.py  test_diff.py  test_generate.py  test_harness.py  test_langchain_adapter.py  test_langfuse_adapter.py  test_llamaindex_adapter.py  test_mcp_server.py  test_pack.py  test_plot_history.py  test_query.py  test_rank_modes.py  test_retrieval.py  test_scaffold.py  test_tokenizer.py
