[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hitgate"
version = "0.1.0"
description = "A label-free retrieval-quality regression gate: measure any retriever's ranking (Hit@K/MRR) on your own corpus, no labels, gated in CI like a test."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Lucas Santana" }]
requires-python = ">=3.10"
keywords = ["rag", "retrieval", "evaluation", "hit@k", "mrr", "regression-gate", "ci", "bm25", "reranking", "search"]
dependencies = []  # the eval harness core is dependency-free; the bundled retriever is the [hybrid] extra below

[project.urls]
Homepage = "https://github.com/LucasSantana-Dev/evidence-first-rag"
Repository = "https://github.com/LucasSantana-Dev/evidence-first-rag"
Methodology = "https://github.com/LucasSantana-Dev/evidence-first-rag/blob/main/docs/METHODOLOGY.md"

[project.optional-dependencies]
hybrid = [
    "sentence-transformers>=2.2",
    "rank-bm25>=0.2",
    "numpy>=1.24",
]

[project.scripts]
rag-query = "ragcore.query:main"
rag-build = "ragcore.build:main"
hitgate-run = "hitgate.run:main"
hitgate-compare = "hitgate.compare:main"
hitgate-diff = "hitgate.diff:main"
hitgate-generate = "hitgate.generate:main"

[tool.setuptools]
packages = ["ragcore", "hitgate"]
